k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerdemo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dockerdemo-api
  template:
    metadata:
      labels:
        app: dockerdemo-api
    spec:
      containers:
      - name: dockerdemo-api
        image: place_holder
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dockerdemo-service
spec:
  type: LoadBalancer
  selector:
    app: dockerdemo-api
  ports:
    - port: 80
      targetPort: 8080
